Fixes for keypresses. Start fixing note positioning/clipping -- still not working right; we need to get the viewport sized properly.

--- a/static/notepage.css
+++ b/static/notepage.css
@@ -9,6 +9,13 @@ body {
 
 #viewport {
     position: relative;
+    border-width: 1px;
+    border-style: solid;
+    width: 100%;
+    height: 100%;
+    clip: auto;
+    overflow: scroll;
+    resize: both;
 }
 
 .note {
@@ -21,10 +28,15 @@ body {
 .note-contents {
     width: 100%;
     height: 100%;
-    margin-left: 10px;
-    margin-right: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    box-sizing: border-box;
+}
+
+.note-contents h1,h2,h3:first-child {
     margin-top: 6px;
-    margin-bottom: 6px;
 }
 
 #note-edit {
